# mala-copilot-advanced-demo

./: .gitignore  pyproject.toml
.github/agents/: pm.agent.md  test-author.agent.md
.github/hooks/: gatekeeper.json
.github/hooks/scripts/: gatekeeper.py
.github/skills/create-backlog-item/: SKILL.md  backlog-item-template.md
.github/skills/project-metrics/: SKILL.md
.github/skills/project-metrics/scripts/: collect-metrics.ps1
